
@startuml diagrama de clase 

class MercaDAW{
   + main()
}
interface Menu{
+ menu(): void
}
abstract Producto{
    + PRECIO_VENTA: double = 0.25;
   - nombre: String
   - marca: String
   - categoria: String
   - precio: double
   - altura:double
   - anchura:double 
   - peso:double
   - numElemento: int
   - descripcion: String
   + aplicarRecargoPorPeso(double peso):double
   + aplicarRecargoPorAltura(double altura):double
   + aplicarRecargoPorAnchura(double anchura):double
   + aplicarRecargoPorNumElemento(int numElemento):double
}

class Alimentacion{
   + IVA: double = 0.04;
}
class Drogeria{
   + IVA: double = 0.10; 
}
class Cosmetica{
   + IVA: double = 0.21;
}
class Empleado{
   + SUELDO_ESTANDAR: double= 1000
   + ID: String
   - nombre :String
   - apellido: String
   - categoria: String
}
class Reponedor{
   + SUELDO: double= 1200
}
class Cajero{
   + SUELDO: double= 1300
}
class Encargado{
   + SUELDO: double= 1500
}
class Cliente{
   - codigoPostal:String
   - nombre: String
   - correo: String
   - fecha: String
}
interface Funcionalidades{
   + darAltaProducto(Producto p):void
   + darAltaEmpleado(Producto p):void
   + mostrarDatosProducto(Producto p)
   + mostrarListaEmpleado():List<Em>
   + obtenerPrecioProducto(Producto p):double
   + imprimirEtiqueta(Producto p):void
  
}

MercaDAW o-- Producto
MercaDAW o-- Empleado
MercaDAW o-- Cliente

Producto <|-- Alimentacion 
Producto <|-- Drogeria
Producto <|-- Cosmetica

Empleado <|-- Reponedor
Empleado <|-- Cajero
Empleado <|-- Encargado

Funcionalidades <|.. MercaDAW
Menu <|.. MercaDAW

@enduml